--- a/src/app/components/listado-noticias/listado-noticias.component.html
+++ b/src/app/components/listado-noticias/listado-noticias.component.html
@@ -1,1 +1,13 @@
-<p>listado-noticias works!</p>
+<div  class="row row-cols-l row-cols-md-4 g-4">
+    <div *ngFor="let noticia of listNoticias" class="col">
+        <div class="card">
+            <img class="card-img-top" [src]="noticia.urlToImage" alt="Card image cap">
+            <div class="card-body">
+              <span class="badge bg-primary mb-1">{{noticia.source.name}}</span>
+              <h5 class="card-title">{{noticia.title}}</h5>
+              <p class="card-text">{{noticia.description}}</p>
+              <a [href]="noticia.url" target="_blank" class="btn btn-primary btn-block">Ver Noticia</a>
+            </div>
+        </div>
+    </div>    
+</div>
